; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_harfbuzz.c_fz_hb_malloc.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_harfbuzz.c_fz_hb_malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"hb\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @fz_hb_malloc(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  store i64 %0, i64* %2, align 8
  %4 = call i32* (...) @get_hb_context()
  store i32* %4, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = load i32*, i32** %3, align 8
  %10 = load i64, i64* %2, align 8
  %11 = call i32 @fz_malloc_no_throw(i32* %9, i64 %10)
  %12 = call i8* @Memento_label(i32 %11, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  ret i8* %12
}

declare dso_local i32* @get_hb_context(...) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i8* @Memento_label(i32, i8*) #1

declare dso_local i32 @fz_malloc_no_throw(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
